--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,42 @@
     border-radius: 10px;
 }
 .why-choose-us-heading{
-    margin: 70px 0px;
-    
-
+    margin top: 70px;
+}
+.why-choose-us-container{
+    display: flex;
+    justify-content: space-around;
+    background-color: #f3d2c1;
+    margin: 20px 0px;
+    padding: 20px;
+    }
+.why-choose-us-card{
+    background-color: #fff;
+    width: 180px;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+    box-shadow: 0 0 10px 3px #808080
+}
+.why-choose-us-img{
+    height: 60px;
+    display: block;
+    margin: 10px auto;
+}
+.header-section{
+    display: flex;
+}
+.header-img-container{
+    width: 50%;
+}
+.header-description-container{
+    width: 50%;
+    padding: 20px;
+}
+.header-img{
+     height: 250px;
+     border: 10px solid  #f582ae;
+     display: block;
+     margin: 20px auto;
+     
 }
